[project]
name = "reference_crew"
version = "0.1.0"
description = "reference-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
reference_crew = "reference_crew.main:run"
run_crew = "reference_crew.main:run"
train = "reference_crew.main:train"
replay = "reference_crew.main:replay"
test = "reference_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
